@@ -132,8 +132,9 @@ ok*probar sobreescribir tap out y que aparezca opcion de rotate y que funcione r
 -Al dejar una ventana con items de menu, en background, se deberia quitar el color del item seleccionado. Si no parece que esa ventana esta activa.
 Ejemplo con AY Player
 
--grabar archivo en imagen mmc no deja. hago mount, y le indico ruta en 0://archivo.m3u por ejemplo
+ok-grabar archivo en imagen mmc no deja. hago mount, y le indico ruta en 0://archivo.m3u por ejemplo
 (por cierto hay que forzar mostrar unidad mmc al cambiar unidad en Drives)
+->Permito mostrar unidad mmc siempre que este montada
 
 -Poder enviar eventos a ventanas. Por ejemplo para el ay player, una función de diga enviar un mensaje (“next track”) q ventana (“ayplayer”). El como acepta ese evento de momento es una incógnita
 Quizá llama a la función que crea la ventana con algún flag específico
