@@ -14,6 +14,7 @@ Improve maximum sent keys to ZENG/ZENG Online
 Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
 Improved Mac timing by using native timer
 Improved Watermark Logo: can be shown only when loading/saving, can change colors when loading/saving
+Improved File Selector: allow to use path to a a FAT mounted image on all cases
 
 Improved AY Player:
 - Allow to load playlist
